# pysomebar

./: README.md  config.toml  pyproject.toml
src/pysomebar/: __init__.py  config.py  module.py  updater.py  util.py
src/pysomebar/module/: __init__.py  battery.py  brightness.py  cpu.py  date.py  memory.py  module.py  mpd.py  network.py  pacman.py  portage.py  pulse.py  temp.py
