[project]
name = "pysomebar"
version = "0.1.0"
description = "Status updater for somebar."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "aiofiles",
  "asyncinotify",
  "psutil",
  "pulsectl-asyncio",
  "pydantic",
]

[project.scripts]
pysomebar = "pysomebar:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]

